tabela.html-modificado

--- a/tabela.html
+++ b/tabela.html
@@ -6,6 +6,54 @@
     <title>TABELAS</title>
 </head>
 <body>
-    
+<!--     <table>
+        <tr>
+            <th>Tipo</th>
+            <th>Preço</th>
+        </tr>
+        <tr>
+            <td>Etanol</td>
+            <td>3,95</td>
+        </tr>
+        <tr>
+            <td>Gasolina</td>
+            <td>6,95</td>
+        </tr>
+    </table> -->
+
+    <table>
+        <caption>Preço médio de combustíveis em 2024</caption>
+
+        <thead>
+            <tr>
+                <th>Tipo</th>
+                <th>Preço</th>
+            </tr>
+        </thead>
+
+        <tbody>
+
+            <tr>
+                <td>Etanol</td>
+                <td>R$ 3.59</td>
+            </tr>
+
+            <tr>
+                <td>Gasolina</td>
+                <td>R$ 5.99</td>
+            </tr>
+
+        </tbody>
+
+        <tfoot>
+            <tr>
+                <td>Preço médio:</td>
+                <td>R$ 4.79</td>
+            </tr>
+        </tfoot>
+
+
+
+    </table>
 </body>
 </html>
